# carla_binary_catkin

./: .travis.yml  CMakeLists.txt  README.md  download_from_gdrive.py  package.xml
scripts/: download_from_gdrive.py
settings/: CarlaSettings.ini
test/: test_carla_catkinization.py
